--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ homepage = "https://www.linkedin.com/in/pedro-jose-mora-gallegos"
 repository = "https://github.com/pedrojosemoragallegos/confflow"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10, <3.14"
 pyyaml = "^6.0.2"
 pydantic = "^2.9.2"
 
