--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "A configuration manager for Python projects"
 authors = ["Pedro José Mora Gallegos <pedrojosemoragallegos@outlook.de>"]
 license = "MIT"
 readme = "README.md"
-homepage = "https://www.linkedin.com/in/pedro-jose-mora-gallegos" 
+homepage = "https://www.linkedin.com/in/pedro-jose-mora-gallegos"
 repository = "https://github.com/pedrojosemoragallegos/confflow"
 
 [tool.poetry.dependencies]
@@ -26,11 +26,11 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.ruff]
 line-length = 88
-select = ["E", "F", "W", "C90"]  
-ignore = ["E501"]  
+select = ["E", "F", "W", "C90"]
+ignore = ["E501"]
 
 [tool.ruff.lint]
-extend-select = ["I"]  
+extend-select = ["I", "D205", "D415"]
 
 [tool.ruff.lint.isort]
 combine-as-imports = true
