--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ twine = "^5.1.1"
 ipython = "^8.29.0"
 ipykernel = "^6.29.5"
 ruff = "^0.7.2"
+anytree = "^2.13.0"
 
 [build-system]
 requires = ["poetry-core"]
