--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,35 +1,67 @@
-[tool.poetry]
+[project]
 name = "confflow"
 version = "3.1.1"
-description = "A configuration manager for Python projects"
-authors = ["Pedro José Mora Gallegos <pedrojosemoragallegos@outlook.de>"]
-license = "MIT"
+description = "Add your description here"
 readme = "README.md"
-homepage = "https://www.linkedin.com/in/pedro-jose-mora-gallegos"
-repository = "https://github.com/pedrojosemoragallegos/confflow"
+authors = [
+    { name = "Pedro José Mora Gallegos", email = "pedrojosemoragallegos@outlook.de" },
+]
+license = { text = "MIT" }
+requires-python = ">=3.10"
+dependencies = [
+    "pyyaml>=6.0.2",
+]
 
-[tool.poetry.dependencies]
-python = ">=3.10, <3.14"
-
-[tool.poetry.group.dev.dependencies]
-pre-commit = "^4.0.1"
-twine = "^5.1.1"
-ipython = "^8.29.0"
-ipykernel = "^6.29.5"
-ruff = "^0.7.2"
-anytree = "^2.13.0"
+[project.scripts]
+confflow = "confflow:main"
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["uv_build>=0.8.17,<0.9.0"]
+build-backend = "uv_build"
+
+
+[project.urls]
+Homepage = "https://www.linkedin.com/in/pedro-jose-mora-gallegos"
+Repository = "https://github.com/pedrojosemoragallegos/confflow"
+
+[tool.mypy]
+strict = true
+warn_unreachable = true
+warn_unused_configs = true
+warn_redundant_casts = true
+warn_no_return = true
 
 [tool.ruff]
 line-length = 88
-select = ["E", "F", "W", "C90"]
-ignore = ["E501"]
+target-version = "py310"
 
 [tool.ruff.lint]
-extend-select = ["I", "D205", "D415"]
+select = ["ALL"]
+
+ignore = [
+    "D100",  # docstring in public module
+    "D101",  # docstring
+    "D102",  # docstring public method
+    "D103",  # docstring in public function
+    "D104",  # docstring public packageRuff
+    "D105",  # docstring magic function
+    "D107",  # docstring __init__
+    "TD002", # missing author in TODO
+    "TD003", # missing issue link for this 
+]
 
 [tool.ruff.lint.isort]
 combine-as-imports = true
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+
+[dependency-groups]
+dev = [
+    "ipykernel>=6.30.1",
+    "ipython>=8.37.0",
+    "mypy>=1.18.2",
+    "ruff>=0.13.1",
+    "types-pyyaml>=6.0.12.20250915",
+]
