--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,24 +1,27 @@
 [project]
-name = "confflow"
-version = "3.1.1"
-description = "Add your description here"
+description = "A Python library for schema-based YAML configuration management with built-in validation, constraints, and type safety"
 readme = "README.md"
+name = "confflow"
+version = "4.0.0"
 authors = [
     { name = "Pedro José Mora Gallegos", email = "pedrojosemoragallegos@outlook.de" },
 ]
-license = { text = "MIT" }
+license = { file = "LICENSE" }
 requires-python = ">=3.10"
-dependencies = [
-    "pyyaml>=6.0.2",
-]
+dependencies = ["pyyaml>=6.0.2"]
 
-[project.scripts]
-confflow = "confflow:main"
+[dependency-groups]
+dev = [
+    "ipykernel>=6.30.1",
+    "ipython>=8.37.0",
+    "mypy>=1.18.2",
+    "ruff>=0.13.1",
+    "types-pyyaml>=6.0.12.20250915",
+]
 
 [build-system]
 requires = ["uv_build>=0.8.17,<0.9.0"]
 build-backend = "uv_build"
-
 
 [project.urls]
 Homepage = "https://www.linkedin.com/in/pedro-jose-mora-gallegos"
@@ -56,12 +59,3 @@ combine-as-imports = true
 [tool.ruff.format]
 quote-style = "double"
 indent-style = "space"
-
-[dependency-groups]
-dev = [
-    "ipykernel>=6.30.1",
-    "ipython>=8.37.0",
-    "mypy>=1.18.2",
-    "ruff>=0.13.1",
-    "types-pyyaml>=6.0.12.20250915",
-]
